# queryagent

./: .env.example  .gitignore  Dockerfile  HOW_TO_MINE.md  New_structure.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  docker-compose.yml  min_compute.yml  pyproject.toml  requirements.txt
backend/: main.py
backend/routes/: chat.py  leaderboard.py  query.py  schema.py  stats.py  training.py
benchmark/ground_truth/: QB-001.json  QB-002.json  QB-003.json  QB-004.json  QB-005.json  QB-006.json  QB-010.json  QB-011.json  QB-012.json  QB-013.json  QB-014.json  QB-015.json  QB-016.json  (+7 more)
docs/: Deploy.md  INVESTOR_BREAKDOWN.md  Miner.md  PITCH_PREP.md  QUERYAGENT_MASTER_PLAN.md  QUERYAGENT_VIDEO_SCRIPT.md  ROADMAP.md  Scoring.md  TESTNET_REPORT.md  Untitled  Validator.md  checks.md  ui.md
findings/: 01_bittensor_core.md  02_yuma_consensus.md  03_dtao_emissions.md  04_miners.md  05_validators.md  06_synapse_protocol.md  07_sdk_classes.md  08_successful_subnets.md  09_subnet_patterns.md  10_repo_structure.md  11_queryagent_checklist.md  README.md  structure.md
logs/: node_setup.md  running_environment.md
neurons/: miner.py  miner_llm.py  miner_local.py  validator.py  validator_local.py
queryagent/: config.py  hashing.py  protocol.py  scoring.py  snapshot.py  tasks.py  training.py
scripts/: build_snapshot.py  generate_tasks.py  restart_miners.sh  restart_validators.sh  run_local.sh
tests/: test_adversarial.py  test_determinism.py  test_e2e.py  test_hashing.py  test_llm_miner.py  test_protocol.py  test_scoring.py  test_snapshot.py  test_tasks.py  test_wire.py
(+4 files in other folders)
