[project]
name = "queryagent"
version = "0.1.0"
description = "QueryAgent — Verified on-chain analytics via competitive SQL benchmarking on Bittensor"
requires-python = ">=3.10"
dependencies = [
    "bittensor>=8.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "structlog>=23.0.0",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["queryagent*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
